--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,5 +27,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PR'
 - !lcsh 'Yukon River Valley (Yukon and Alaska) -- Poetry'
+- GITenberg
 title: Songs of a Sourdough
 url: http://www.gutenberg.org/ebooks/25546
